updated vcode conf files